--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
             <a href="#lab4">Лабораторна робота №4</a>
             <a href="#lab5">Лабораторна робота №5</a>
             <a href="#lab5">Лабораторна робота №6</a>
-        </nav>
+            <a href="#lab7">Лабораторна робота №7</a> 
+       </nav>
 
         <section class="lab-section" id="lab1">
             <h2>ЛАБОРАТОРНА РОБОТА №1</h2>
